--- a/packages/salesforcedx-vscode-core/package.json
+++ b/packages/salesforcedx-vscode-core/package.json
@@ -734,6 +734,11 @@
           "type": "boolean",
           "default": false,
           "description": "%push_or_deploy_on_save_enabled_description%"
+        },
+        "salesforcedx-vscode-core.conflict-detection.enabled": {
+          "type": "boolean",
+          "default": false,
+          "description": "%conflict_detection_enabled_description%"
         }
       }
     },
